[package]
name = "api"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "0.8", features = [ "v4" ] }

[dev-dependencies]
tokio = { version = "0.3.3", features = [ "full" ] } 
